# solana_insurance_protocol

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  program-keypair.json
.cargo/: config.toml
app/components/: RiskScoreCard.tsx
client/: index.ts
programs/solana_insurance_protocol/: Cargo.toml
programs/solana_insurance_protocol/src/: capital_management.rs  claims.rs  exploit_detection.rs  lib.rs  risk_assessment.rs
tests/: solana_insurance_protocol.ts
