[package]
name = "solana-insurance-protocol"
version = "0.1.0"
description = "Automated Insurance Protocol for Solana DeFi"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_insurance_protocol"
path = "programs/solana_insurance_protocol/src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ahash = { version = "=0.7.8" } 
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
# For serialization/deserialization
borsh = "0.10.3"
# For machine learning component
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15.6"


